change: shortcuts are columned on small screen, little fixes

--- a/UniWarStrats/style.css
+++ b/UniWarStrats/style.css
@@ -36,6 +36,7 @@ header {
     border-style: solid;
     border-radius: 10px;
     margin: 2px;
+    align-self: center;
 }
 
 nav {
@@ -82,6 +83,7 @@ h1 {
 .shortcut:hover .dropdown-content {
     display: block;
     left: 0;
+    position:absolute;
     /*background-image: url(stars.png); */
     /*background-color: black;*/
     };
@@ -127,7 +129,7 @@ footer {
 
 /* ----- mobiles or small screens ----- */
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 750px) {
     .logo {
         display: none;
     }
@@ -138,5 +140,11 @@ footer {
 
     h2 {
         font-size:small;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .shortcuts {
+        flex-direction: column;
     }
 }
